--- a/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
+++ b/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
@@ -53,13 +53,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChangeBackgroundJob.cs" />
+    <Compile Include="Utility\ChangeBackgroundJob.cs" />
     <Compile Include="DataConnection\APIManager.cs" />
     <Compile Include="DataConnection\IDataRequest.cs" />
     <Compile Include="EventSystem.cs" />
     <Compile Include="ImageFileManager.cs" />
-    <Compile Include="JobManager.cs" />
-    <Compile Include="ScheduleManager.cs" />
+    <Compile Include="Utility\JobManager.cs" />
+    <Compile Include="Utility\ScheduleManager.cs" />
     <Compile Include="Model\TimeModel.cs" />
     <Compile Include="Utility\BackGroundPicker.cs" />
     <Compile Include="Utility\GlobalConfig.cs" />
