Squashed tons of bugs, Final commit before major refactor.

--- a/AutomatedDesktopBackgroundUI/AutomatedDesktopBackgroundUI.csproj
+++ b/AutomatedDesktopBackgroundUI/AutomatedDesktopBackgroundUI.csproj
@@ -110,7 +110,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -128,8 +128,9 @@
       <Name>AutomatedDesktopBackgroundLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Images\" />
+    <None Include="Images\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
