--- a/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
+++ b/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Database Procs\DataStorage.cs" />
     <Compile Include="Database Procs\DataStorageBuilder.cs" />
     <Compile Include="DataKeeper.cs" />
+    <Compile Include="FileCleaner.cs" />
     <Compile Include="IAPIManager.cs" />
     <Compile Include="IAPIResult.cs" />
     <Compile Include="IAPIResultConverter.cs" />
