Cleaned the whole solution's code format with codeMaid

--- a/AutomatedDesktopBackgroundUI/AutomatedDesktopBackgroundUI.csproj
+++ b/AutomatedDesktopBackgroundUI/AutomatedDesktopBackgroundUI.csproj
@@ -68,6 +68,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="RootWindow.xaml.cs">
       <DependentUpon>RootWindow.xaml</DependentUpon>
     </Compile>
