The refactor of the century/ application now works fairly well

--- a/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
+++ b/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
@@ -55,42 +55,41 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APICaller.cs" />
-    <Compile Include="APIResult.cs" />
+    <Compile Include="API Classes\APICaller.cs" />
+    <Compile Include="API Classes\APIResult.cs" />
     <Compile Include="DataConnection\FileRequest.cs" />
     <Compile Include="DataConnection\FileRequestsManager.cs" />
     <Compile Include="DataConnection\ImageGetterBase.cs" />
     <Compile Include="DataConnection\LocalImageGetter.cs" />
-    <Compile Include="Database Procs\DataStorage.cs" />
-    <Compile Include="Database Procs\DataStorageBuilder.cs" />
-    <Compile Include="DataKeeper.cs" />
-    <Compile Include="FileCleaner.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="IAPIManager.cs" />
-    <Compile Include="IAPIResult.cs" />
-    <Compile Include="IAPIResultConverter.cs" />
-    <Compile Include="IDataStorage.cs" />
-    <Compile Include="IDataStorageBuilder.cs" />
-    <Compile Include="IFileListener.cs" />
-    <Compile Include="ImageModelBuilder.cs" />
+    <Compile Include="Data Storage\DataStorage.cs" />
+    <Compile Include="Data Storage\DataStorageBuilder.cs" />
+    <Compile Include="Data Storage\DataKeeper.cs" />
+    <Compile Include="File Management\DirectoryNavigator.cs" />
+    <Compile Include="File Management\FileCollection.cs" />
+    <Compile Include="File Management\GlobalSuppressions.cs" />
+    <Compile Include="API Classes\IAPIManager.cs" />
+    <Compile Include="API Classes\IAPIResult.cs" />
+    <Compile Include="API Classes\IAPIResultConverter.cs" />
+    <Compile Include="Data Storage\IDataStorage.cs" />
+    <Compile Include="Data Storage\IDataStorageBuilder.cs" />
+    <Compile Include="File Management\IFileCollection.cs" />
+    <Compile Include="File Management\IFileListener.cs" />
+    <Compile Include="ImageFileProcessing\ImageModelExtensions.cs" />
+    <Compile Include="Model\ImageModelBuilder.cs" />
+    <Compile Include="Model\InterestBuilder.cs" />
+    <Compile Include="File Management\InternalFileDirectorySystem.cs" />
     <Compile Include="InterestFileProcessing\IInterestFileProcessor.cs" />
-    <Compile Include="ImageFileProcessing\FavoriteImageProcessor.cs" />
-    <Compile Include="FileSorting\FileCollectionExtensions.cs" />
-    <Compile Include="FileSorting\FileCollection.cs" />
-    <Compile Include="FileSorting\FilteredFileResult.cs" />
-    <Compile Include="Database Procs\IDatabaseConnector.cs" />
+    <Compile Include="Data Storage\IDatabaseConnector.cs" />
     <Compile Include="ImageFileProcessing\IImageFileProcessor.cs" />
-    <Compile Include="ImageFileProcessing\HatedImageProcessor.cs" />
-    <Compile Include="FileSorting\IFileCollection.cs" />
-    <Compile Include="FileSorting\IFilteredFileResult.cs" />
     <Compile Include="ImageFileProcessing\ImageFileProcessor.cs" />
-    <Compile Include="Database Procs\ISaveable.cs" />
+    <Compile Include="Model\ISaveable.cs" />
     <Compile Include="InterestFileProcessing\InterestFileProcessor.cs" />
-    <Compile Include="IRootObject.cs" />
-    <Compile Include="IURLBuilder.cs" />
-    <Compile Include="UnsplashUrlBuilder.cs" />
-    <Compile Include="WallpaperFileProcessing\IWallPaperFileProcessor.cs" />
-    <Compile Include="Database Procs\TextFileConnector.cs" />
+    <Compile Include="Model\SettingsModel.cs" />
+    <Compile Include="ResponseClasses\IRootObject.cs" />
+    <Compile Include="API Classes\IURLBuilder.cs" />
+    <Compile Include="Data Storage\JsonDataConnector.cs" />
+    <Compile Include="API Classes\UnsplashUrlBuilder.cs" />
+    <Compile Include="Data Storage\TextFileConnector.cs" />
     <Compile Include="Utility\EnumHolder.cs" />
     <Compile Include="DataConnection\InterenetConnectionChecker.cs" />
     <Compile Include="Jobs\CollectionRefresher.cs" />
@@ -98,7 +97,6 @@
     <Compile Include="Jobs\ChangeBackgroundJob.cs" />
     <Compile Include="DataConnection\APIManager.cs" />
     <Compile Include="ResponseClasses\LiteImageResponseModel.cs" />
-    <Compile Include="Utility\ImageFileUpdater.cs" />
     <Compile Include="Utility\ReaderWriterLockSlimExtensions.cs" />
     <Compile Include="Utility\StringExtensions.cs" />
     <Compile Include="Utility\EventSystem.cs" />
@@ -125,7 +123,6 @@
     <Compile Include="DataConnection\ObjectToTextProcessor.cs" />
     <Compile Include="Jobs\WallpaperSetter.cs" />
     <Compile Include="Utility\WindowManager.cs" />
-    <Compile Include="WallpaperFileProcessing\WallpaperFileProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
