--- a/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
+++ b/AutomatedDesktopBackground_Library/AutomatedDesktopBackgroundLibrary.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -85,11 +86,29 @@
     <Compile Include="Model\ISaveable.cs" />
     <Compile Include="InterestFileProcessing\InterestFileProcessor.cs" />
     <Compile Include="Model\SettingsModel.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ResponseClasses\IRootObject.cs" />
     <Compile Include="API Classes\IURLBuilder.cs" />
     <Compile Include="Data Storage\JsonDataConnector.cs" />
     <Compile Include="API Classes\UnsplashUrlBuilder.cs" />
     <Compile Include="Data Storage\TextFileConnector.cs" />
+    <Compile Include="Utility\CustomMessageBox.cs" />
+    <Compile Include="Utility\CustomMessageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Utility\CustomMessageForm.Designer.cs">
+      <DependentUpon>CustomMessageForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utility\CustomTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Utility\CustomTextBox.Designer.cs">
+      <DependentUpon>CustomTextBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utility\EnumHolder.cs" />
     <Compile Include="DataConnection\InterenetConnectionChecker.cs" />
     <Compile Include="Jobs\CollectionRefresher.cs" />
@@ -133,6 +152,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Utility\CustomMessageForm.resx">
+      <DependentUpon>CustomMessageForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
