Updated some UI + added stability to Quartz scheduling

--- a/AutomatedDesktopBackgroundUI/AutomatedDesktopBackgroundUI.csproj
+++ b/AutomatedDesktopBackgroundUI/AutomatedDesktopBackgroundUI.csproj
@@ -134,6 +134,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WarningWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -157,6 +161,10 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="Images\Love it.png" />
+    <Resource Include="Images\Love it_disabled.png" />
+    <Resource Include="Images\TrashIcon.png" />
+    <Resource Include="Images\NextImageButton.png" />
     <Content Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
