--- a/AutomatedDesktopBackground_Library/packages.config
+++ b/AutomatedDesktopBackground_Library/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="Quartz" version="3.0.7" targetFramework="net471" quartz.scheduler.instanceName="MyScheduler" quartz.threadPool.threadCount="3" quartz.jobStore.type="Quartz.Simpl.RAMJobStore" Quartz="" />
   <package id="System.Threading" version="4.3.0" targetFramework="net471" />
