--- a/ChangeBackgroundOnce/ChangeBackgroundOnce.csproj
+++ b/ChangeBackgroundOnce/ChangeBackgroundOnce.csproj
@@ -36,7 +36,7 @@
     <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>nextimagebutton_sEJ_icon.ico</ApplicationIcon>
+    <ApplicationIcon>skip_A2U_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -62,7 +62,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="nextimagebutton_sEJ_icon.ico" />
+    <Content Include="skip_A2U_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
